--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="pinHint">Enter 4 Digit Pin</string>
     <string name="attemptsCount">Attempts Left:</string>
     <string name="currentCount">5</string>
+    <string name="title_activity_register">registerActivity</string>
 </resources>
